# scinge

./: README.md  example.cpp
src/: CMakeLists.txt  example.cpp  matrix.hpp  scinge.hpp  scinge.lisp
